feat: add user entity to auth response
