# src/core/auth/api-model/access-token.api-model.ts
@@ -1,4 +1,0 @@
-import { PickType } from '@nestjs/swagger'
-import { AuthTokensApiModel } from './auth-tokens.api-model'
-
-export class AccessTokenApiModel extends PickType(AuthTokensApiModel, ['accessToken'] as const) {}
