# src/core/auth/api-model/index.ts
@@ -1,3 +1,3 @@
 export * from './auth-tokens.api-model'
-export * from './access-token.api-model'
+export * from './success-auth.api-model'
 export * from './otp-ticket.api-model'
